--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,11 +10,14 @@ services:
       context: .
       dockerfile: Dockerfile
     restart: always
-    ports:
-      - 5020:3000
+    expose:
+      - 3000
     networks:
-      - ms_chat_default
+      - nginx_proxy_default
+      - mongo_default
 
 networks:
-  ms_chat_default:
-    driver: bridge
+  nginx_proxy_default:
+    external: true
+  mongo_default:
+    external: true
