--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/cors": "^2.8.13",
 		"@types/dotenv": "8.2.0",
+		"@types/express": "^4.17.17",
 		"@types/node": "20.2.5",
 		"nodemon": "2.0.22",
 		"ts-node": "10.9.1",
 		"typescript": "5.0.4"
 	},
 	"dependencies": {
+		"cors": "^2.8.5",
 		"dotenv": "16.0.3",
+		"express": "4.18.2",
 		"mongoose": "^7.2.4",
 		"socket.io": "4.6.2"
 	}
